--- a/security/ruby-openid/Makefile
+++ b/security/ruby-openid/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.5 2017/06/05 03:29:38 taca Exp $
+# $NetBSD: Makefile,v 1.6 2017/06/18 13:48:53 taca Exp $
 
 DISTNAME=	openid-0.0.1
 PKGNAME=	${RUBY_PKGPREFIX}-${DISTNAME}
@@ -11,7 +11,7 @@ LICENSE=	gnu-lgpl-v2.1 OR ruby-license
 
 USE_LANGUAGES=	# none
 
-RUBY_VERSIONS_ACCEPTED=	23 22
+RUBY_VERSIONS_ACCEPTED=	23 22 24
 
 .include "../../lang/ruby/gem.mk"
 .include "../../mk/bsd.pkg.mk"
