--- a/sysutils/ruby-listen/Makefile
+++ b/sysutils/ruby-listen/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.12 2017/01/09 15:02:31 taca Exp $
+# $NetBSD: Makefile,v 1.13 2017/06/18 13:48:54 taca Exp $
 
 DISTNAME=	listen-3.1.5
 PKGREVISION=	1
@@ -12,7 +12,7 @@ LICENSE=	mit
 
 RUBYGEM_OPTIONS+=	--format-executable
 
-RUBY_VERSIONS_ACCEPTED= 22 23
+RUBY_VERSIONS_ACCEPTED= 22 23 24
 
 .include "../../lang/ruby/rubyversion.mk"
 
