--- a/www/ruby-http_router/Makefile
+++ b/www/ruby-http_router/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.5 2017/06/05 03:29:38 taca Exp $
+# $NetBSD: Makefile,v 1.6 2017/06/18 13:48:54 taca Exp $
 
 DISTNAME=	http_router-0.11.2
 CATEGORIES=	www
@@ -11,7 +11,7 @@ LICENSE=	mit
 DEPENDS+=	${RUBY_PKGPREFIX}-rack>=1.0.0:../../www/ruby-rack
 DEPENDS+=	${RUBY_PKGPREFIX}-url_mount>=0.2.1<0.3:../../www/ruby-url_mount
 
-RUBY_VERSIONS_ACCEPTED=	23 22
+RUBY_VERSIONS_ACCEPTED=	23 22 24
 
 .include "../../lang/ruby/gem.mk"
 .include "../../mk/bsd.pkg.mk"
