--- a/www/ruby-url_mount/Makefile
+++ b/www/ruby-url_mount/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2 2017/06/05 03:29:38 taca Exp $
+# $NetBSD: Makefile,v 1.3 2017/06/18 13:48:54 taca Exp $
 
 DISTNAME=	url_mount-0.2.1
 CATEGORIES=	www
@@ -10,7 +10,7 @@ LICENSE=	mit
 
 DEPENDS+=	${RUBY_PKGPREFIX}-rack>=0:../../www/ruby-rack
 
-RUBY_VERSIONS_ACCEPTED=	23 22
+RUBY_VERSIONS_ACCEPTED=	23 22 24
 
 .include "../../lang/ruby/gem.mk"
 .include "../../mk/bsd.pkg.mk"
