--- a/sysutils/ruby-chef/Makefile
+++ b/sysutils/ruby-chef/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.6 2017/06/12 14:40:38 taca Exp $
+# $NetBSD: Makefile,v 1.7 2017/06/18 16:24:52 taca Exp $
 
 DISTNAME=	chef-13.1.31
 CATEGORIES=	sysutils
@@ -39,7 +39,7 @@ DEPENDS+=	${RUBY_PKGPREFIX}-proxifier>=1.0<2:../../net/ruby-proxifier
 DEPENDS+=	${RUBY_PKGPREFIX}-bundler>=1.10:../../misc/ruby-bundler
 
 RUBYGEM_OPTIONS+=	--format-executable
-RUBY_VERSIONS_ACCEPTED=	23	# www/ruby-ohai
+RUBY_VERSIONS_ACCEPTED=	23 24	# www/ruby-ohai
 
 pre-configure:
 	cd ${WRKSRC}/bin && ${FIND} . -type f -exec ${CHMOD} ${BINMODE} {} \;
