--- a/editors/vim-share/Makefile
+++ b/editors/vim-share/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.47 2017/06/05 14:23:57 ryoon Exp $
+# $NetBSD: Makefile,v 1.48 2017/06/18 17:46:59 morr Exp $
 
 PKGNAME=		vim-share-${VIM_VERSION}.${VIM_PATCHLEVEL}
-PKGREVISION=		1
 COMMENT=		Data files for the vim editor (vi clone)
 
 .include		"Makefile.common"
