--- a/databases/mysql55-client/Makefile
+++ b/databases/mysql55-client/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.27 2016/08/04 10:09:46 adam Exp $
+# $NetBSD: Makefile,v 1.28 2017/06/19 12:07:50 jperkin Exp $
 
 PKGNAME=	${DISTNAME:S/-/-client-/}
+PKGREVISION=	1
 COMMENT=	MySQL 5, a free SQL database (client)
 
 CONFLICTS=	mysql3-client-[0-9]*
