--- a/x11/mcookie/Makefile
+++ b/x11/mcookie/Makefile
@@ -1,13 +1,13 @@
-# $NetBSD: Makefile,v 1.8 2017/05/12 02:41:54 maya Exp $
+# $NetBSD: Makefile,v 1.9 2017/06/19 20:44:25 wiz Exp $
 #
 # Changelog: see
 # https://git.kernel.org/cgit/utils/util-linux/util-linux.git/log/misc-utils/mcookie.c
 # https://git.kernel.org/cgit/utils/util-linux/util-linux.git/log/misc-utils/mcookie.1
 
-DISTNAME=	util-linux-2.29.2
+DISTNAME=	util-linux-2.30
 PKGNAME=	${DISTNAME:S/util-linux/mcookie/}
 CATEGORIES=	sysutils
-MASTER_SITES=	https://www.kernel.org/pub/linux/utils/util-linux/v2.29/
+MASTER_SITES=	https://www.kernel.org/pub/linux/utils/util-linux/v2.30/
 EXTRACT_SUFX=	.tar.xz
 
 MAINTAINER=	reed@reedmedia.net
