--- a/sysutils/ruby-specinfra/Makefile
+++ b/sysutils/ruby-specinfra/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1 2017/06/10 16:38:25 taca Exp $
+# $NetBSD: Makefile,v 1.2 2017/06/20 13:42:33 taca Exp $
 
 DISTNAME=	specinfra-2.68.0
 CATEGORIES=	sysutils
@@ -14,7 +14,7 @@ OVERRIDE_GEMSPEC+=	sfl:
 
 .include "../../lang/ruby/rubyversion.mk"
 
-.if ${RUBY_VER} == "21" || ${RUBY_VER} == "22"
+.if ${RUBY_VER} == "22"
 DEPENDS+=	${RUBY_PKGPREFIX}-net-telnet>=0:../../net/ruby-net-telnet
 .endif
 
