Upgrade to ExaBGP version 3.4.19.
Pkgsrc changes:
 * Adapt PLIST
 * Adapt Makefile to new python scripts

Upstream changes:

3.4.19 ExaBGP 'LINX 97/43' release
======
 * Add: IPv6 nlri-mpls to list of enabled protocol (was missing)
   requested by: adrian62
 * Fix: encoding of Flow Label requiring more than 2 bytes
   reported by: BLAKEMMM
 * Fix: decoding of capability (was potentially over reading)
 * Fix: trace when trying to access PID file and this is not allowed
   reported by: George Shuklin
 * Fix: Remove a peer's RIB cache when it is deleted from the config file
   patch by: Brian Johnson
 * Fix: do not crash the reactor when an invalid IP is passed via the API
   reported by: Yevgeniy Ovsyannikov
 * Fix: bad defintion of Flow for ICMPType, ICMPCode and Fragment
   reported by: Christoph Loibl
 * Feature: allow add-path for mpls-vpn
   reported by: adrian62
 * Change: Backported setup.py from master
 * Feature: added SRPMS for exabgp
   patch by: Leonardo Amaral

3.4.18 ExaBGP 'No BETT' release
======
 * Backport: backhole community (RFC 7999)
   original patch by: Job Snijders
 * Fix: Configuration parser does not accept configs without neighbors.
   patch by doddt
 * Fix: 'connect' keyword is now also allowed in neighbor scope
   patch by: Stacey Sheldon (Corsa)
 * Fix: removing protocol auto-cleanup (it should never be called
   and seems to cause a CG issue)
   reported by: Colin Petrie
 * Change: default to a 0 offset for ipv6 flowspec source/destination match
   patch by: Brian Johnson
 * Fix: Better PID file handling
   reported by: Ben Agricola
 * Fix: Update RIB cache families on configuration reload
   patch by: Brian Johnson
 * Fix: Backport fix on SIGUSR2 (restarting process not needing to be)
   patch by: Shawn Zhou
 * Change: group-updates now generates one UPDATE per address family
   (and not one per NLRI for non IPv4)
   patch by: Brian Johnson

3.4.17 ExaBGP 'No EPF' release
======
 * Fix: does not accept IPv6 as router-id
   reported by: 

--- a/net/exabgp/Makefile
+++ b/net/exabgp/Makefile
@@ -1,15 +1,14 @@
-# $NetBSD: Makefile,v 1.19 2017/01/01 14:43:49 wiz Exp $
+# $NetBSD: Makefile,v 1.20 2017/06/20 14:10:16 he Exp $
 
-VERSION=	3.4.11
+VERSION=	3.4.19
 DISTNAME=	${VERSION}
 PKGNAME=	exabgp-${VERSION}
-PKGREVISION=	2
 EGG_NAME=	exabgp-${VERSION}
 CATEGORIES=	net
 MASTER_SITES=	${MASTER_SITE_GITHUB:=Exa-Networks/exabgp/archive/}
 DIST_SUBDIR=	exabgp
 
-MAINTAINER=	pettai@NetBSD.org
+MAINTAINER=	he@NetBSD.org
 HOMEPAGE=	https://github.com/Exa-Networks/exabgp/
 COMMENT=	ExaBGP is a userspace BGP daemon written in python
 LICENSE=	modified-bsd
@@ -35,6 +34,27 @@ REPLACE_PYTHON+=	lib/exabgp/application/netlink.py
 REPLACE_PYTHON+=	lib/exabgp/netlink/old.py
 REPLACE_PYTHON+=	lib/exabgp/netlink/route.py
 REPLACE_PYTHON+=	lib/exabgp/reactor/api/encoding.py
+REPLACE_PYTHON+=	qa/conf/api-add-remove.run
+REPLACE_PYTHON+=	qa/conf/api-announcement.run
+REPLACE_PYTHON+=	qa/conf/api-api.nothing.run
+REPLACE_PYTHON+=	qa/conf/api-api.receive.run
+REPLACE_PYTHON+=	qa/conf/api-broken-flow.run
+REPLACE_PYTHON+=	qa/conf/api-check.run
+REPLACE_PYTHON+=	qa/conf/api-eor.run
+REPLACE_PYTHON+=	qa/conf/api-fast.run
+REPLACE_PYTHON+=	qa/conf/api-flow.run
+REPLACE_PYTHON+=	qa/conf/api-multi-neighbor.run
+REPLACE_PYTHON+=	qa/conf/api-multisession.run
+REPLACE_PYTHON+=	qa/conf/api-nexthop-self.run
+REPLACE_PYTHON+=	qa/conf/api-nexthop.run
+REPLACE_PYTHON+=	qa/conf/api-notification.run
+REPLACE_PYTHON+=	qa/conf/api-open.run
+REPLACE_PYTHON+=	qa/conf/api-reload.run
+REPLACE_PYTHON+=	qa/conf/api-teardown.run
+REPLACE_PYTHON+=	qa/conf/api-vpls.run
+REPLACE_PYTHON+=	qa/conf/api-vpnv4.run
+REPLACE_PYTHON+=	qa/conf/manual-eor.run
+REPLACE_PYTHON+=	qa/conf/watchdog.run
 
 PYTHON_VERSIONS_INCOMPATIBLE=	34 35 36 # not yet ported as of 3.2.19
 
