--- a/x11/xfce4-exo/Makefile
+++ b/x11/xfce4-exo/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.47 2017/06/18 20:39:29 youri Exp $
+# $NetBSD: Makefile,v 1.48 2017/06/20 14:33:21 youri Exp $
 
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
@@ -25,6 +25,7 @@ CONF_FILES=		${EGDIR}/helpers.rc ${PKG_SYSCONFDIR}/helpers.rc
 OWN_DIRS+=		${EGDIR}
 
 .include "../../sysutils/desktop-file-utils/desktopdb.mk"
+.include "../../x11/gtk2/buildlink3.mk"
 .include "../../x11/libxfce4ui/buildlink3.mk"
 .include "../../graphics/hicolor-icon-theme/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
