--- a/x11/xfce4-gtk2-engine/Makefile
+++ b/x11/xfce4-gtk2-engine/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.38 2017/02/12 06:26:16 ryoon Exp $
+# $NetBSD: Makefile,v 1.39 2017/06/20 14:59:54 youri Exp $
 
 PKGREVISION= 4
 .include "../../meta-pkgs/xfce4/Makefile.common"
@@ -13,6 +13,8 @@ HOMEPAGE=	https://wiki.xfce.org/howto/gtk_theme
 COMMENT=	Xfce GTK2 themes
 
 MAKE_DIRS+=	${PREFIX}/share/themes/Xfce
+
+CONFIGURE_ARGS+=--enable-gtk3
 
 .include "../../x11/gtk2/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
