--- a/print/luatex/Makefile
+++ b/print/luatex/Makefile
@@ -1,10 +1,9 @@
-# $NetBSD: Makefile,v 1.56 2017/05/02 13:37:32 wiz Exp $
+# $NetBSD: Makefile,v 1.57 2017/06/20 20:50:50 markd Exp $
 
-DISTNAME=	texlive-20160523-source
-PKGNAME=	luatex-0.95
-PKGREVISION=	6
+DISTNAME=	texlive-20170524-source
+PKGNAME=	luatex-1.0.4
 CATEGORIES=	print
-MASTER_SITES=	ftp://tug.org/historic/systems/texlive/2016/
+MASTER_SITES=	ftp://tug.org/historic/systems/texlive/2017/
 EXTRACT_SUFX=	.tar.xz
 
 MAINTAINER=	minskim@NetBSD.org
