--- a/print/xdvik/Makefile
+++ b/print/xdvik/Makefile
@@ -1,9 +1,10 @@
-# $NetBSD: Makefile,v 1.21 2016/06/16 04:06:20 markd Exp $
+# $NetBSD: Makefile,v 1.22 2017/06/20 20:50:50 markd Exp $
 
-DISTNAME=	texlive-20160523-source
+DISTNAME=	texlive-20170524-source
 PKGNAME=	xdvik-22.87.03
+PKGREVISION=	1
 CATEGORIES=	print
-MASTER_SITES=	ftp://tug.org/historic/systems/texlive/2016/
+MASTER_SITES=	ftp://tug.org/historic/systems/texlive/2017/
 EXTRACT_SUFX=	.tar.xz
 
 MAINTAINER=	minskim@NetBSD.org
