--- a/print/tex-cweb-doc/Makefile
+++ b/print/tex-cweb-doc/Makefile
@@ -1,10 +1,11 @@
-# $NetBSD: Makefile,v 1.2 2016/06/16 04:06:02 markd Exp $
+# $NetBSD: Makefile,v 1.3 2017/06/20 22:07:26 markd Exp $
 
 DISTNAME=	cweb.doc
-PKGNAME=	tex-${DISTNAME:S/./-/}-3.64af
-TEXLIVE_REV=	40768
+PKGNAME=	tex-${DISTNAME:S/./-/}-3.64b
+TEXLIVE_REV=	44166
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
+HOMEPAGE=	http://ctan.org/pkg/cweb
 COMMENT=	Documentation for tex-cweb
 
 TEX_TEXMF_DIRS+=	${PREFIX}/share/texmf-dist
