Update to TeXlive 2017
  Updated print/tex-glossaries{,-doc} to 4.30
  Updated print/tex-graphics{,-doc} to 1.2a
  Updated print/tex-graphics-def{,-doc} to 2017
  Updated graphics/tex-graphics-pln{,-doc} to 2017
  Updated print/tex-hausarbeit-jura{,-doc} to 1.5
  Updated print/tex-hyperref{,-doc} to 6.85a
  Updated print/tex-hyphen-base to 2017
  Updated print/tex-hyphen-german to 2017
  Updated print/tex-hyphen-latin to 3.1.2017
  Updated fonts/tex-inconsolata{,-doc} to 1.112
  Updated fonts/tex-ipaex-type1{,-doc} to 0.4a
  Updated fonts/tex-japanese-otf{,-doc} to 1.7b6.42950
  Updated print/tex-jsclasses to 2017

--- a/fonts/tex-japanese-otf/Makefile
+++ b/fonts/tex-japanese-otf/Makefile
@@ -1,16 +1,18 @@
-# $NetBSD: Makefile,v 1.4 2016/08/07 07:17:37 markd Exp $
+# $NetBSD: Makefile,v 1.5 2017/06/21 07:24:07 markd Exp $
 
 DISTNAME=	japanese-otf
-PKGNAME=	tex-${DISTNAME}-1.7b6.41546
-TEXLIVE_REV=	41546
+PKGNAME=	tex-${DISTNAME}-1.7b6.42950
+TEXLIVE_REV=	42950
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://ctan.org/pkg/japanese-otf
 COMMENT=	Advanced font selection for platex and its friends
 LICENSE=	modified-bsd
 
-TEX_KANJIMAP_FILES+=	otf-cktx.map
-TEX_KANJIMAP_FILES+=	otf-@kanjiEmbed@.map
+TEX_KANJIMAP_FILES+=	otf-@jaEmbed@.map
+TEX_KANJIMAP_FILES+=	otf-sc-@scEmbed@.map
+TEX_KANJIMAP_FILES+=	otf-tc-@tcEmbed@.map
+TEX_KANJIMAP_FILES+=	otf-ko-@koEmbed@.map
 
 .include "../../print/texlive/package.mk"
 .include "../../mk/bsd.pkg.mk"
