--- a/graphics/tex-graphics-pln/Makefile
+++ b/graphics/tex-graphics-pln/Makefile
@@ -1,12 +1,13 @@
-# $NetBSD: Makefile,v 1.1 2015/05/03 10:01:03 markd Exp $
+# $NetBSD: Makefile,v 1.2 2017/06/21 07:24:06 markd Exp $
 
 DISTNAME=	graphics-pln
-PKGNAME=	tex-${DISTNAME}-2014
-TEXLIVE_REV=	16917
+PKGNAME=	tex-${DISTNAME}-2017
+TEXLIVE_REV=	44567
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
+HOMEPAGE=	http://ctan.org/pkg/graphics-pln
 COMMENT=	LaTeX-style graphics for Plain TeX users
-LICENSE=	lppl-1.3c
+LICENSE=	lppl-1.0
 
 CONFLICTS+=	teTeX-texmf<=3.0nb47
 
