--- a/print/tex-hyphen-german/Makefile
+++ b/print/tex-hyphen-german/Makefile
@@ -1,10 +1,11 @@
-# $NetBSD: Makefile,v 1.6 2016/06/16 04:06:06 markd Exp $
+# $NetBSD: Makefile,v 1.7 2017/06/21 07:24:07 markd Exp $
 
 DISTNAME=	hyphen-german
-PKGNAME=	tex-${DISTNAME}-2016
-TEXLIVE_REV=	40340
+PKGNAME=	tex-${DISTNAME}-2017
+TEXLIVE_REV=	44401
 
 MAINTAINER=	minskim@NetBSD.org
+HOMEPAGE=	http://ctan.org/pkg/hyphen-german
 COMMENT=	Hyphenation patterns for German
 LICENSE=	lppl-1.3c
 
