--- a/meta-pkgs/texlive-collection-bibtexextra/Makefile
+++ b/meta-pkgs/texlive-collection-bibtexextra/Makefile
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.8 2017/01/20 23:31:08 markd Exp $
+# $NetBSD: Makefile,v 1.9 2017/06/22 09:37:20 markd Exp $
 
 DISTNAME=	collection-bibtexextra
-PKGNAME=	texlive-${DISTNAME}-2016pre3
+PKGNAME=	texlive-${DISTNAME}-2017pre1
 CATEGORIES=	meta-pkgs
 MASTER_SITES=	# empty
-TEXLIVE_REV=	41634
+TEXLIVE_REV=	44385
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://www.tug.org/texlive/
@@ -29,20 +29,25 @@ DEPENDS+=	tex-biblatex-[0-9]*:../../print/tex-biblatex
 # depend biblatex-abnt
 # depend biblatex-anonymous
 # depend biblatex-apa
+# depend biblatex-archaeology
+# depend biblatex-arthistory-bonn
 # depend biblatex-bookinarticle
 # depend biblatex-bookinother
 # depend biblatex-bwl
 # depend biblatex-caspervector
 # depend biblatex-chem
 # depend biblatex-chicago
+# depend biblatex-claves
 # depend biblatex-dw
 # depend biblatex-fiwi
+# depend biblatex-gb7714-2015
 # depend biblatex-gost
 # depend biblatex-historian
 # depend biblatex-ieee
 # depend biblatex-ijsra
 # depend biblatex-iso690
 # depend biblatex-juradiss
+# depend biblatex-lni
 # depend biblatex-luh-ipw
 # depend biblatex-manuscripts-philology
 # depend biblatex-mla
@@ -53,11 +58,14 @@ DEPENDS+=	tex-biblatex-[0-9]*:../../print/tex-biblatex
 # depend biblatex-nejm
 # depend biblatex-nottsclassic
 # depend biblatex-opcit-booktitle
+# depend biblatex-oxref
 # depend biblatex-philosophy
 # depend biblatex-phys
 # depend biblatex-publist
 # depend biblatex-realauthor
+# depend biblatex-sbl
 # depend biblatex-science
+# depend biblatex-shortfields
 # depend biblatex-source-division
 # depend biblatex-subseries
 # depend biblatex-swiss-legal
@@ -68,6 +76,7 @@ DEPENDS+=	tex-biblatex-[0-9]*:../../print/tex-biblatex
 DEPENDS+=	tex-bibtopic-[0-9]*:../../print/tex-bibtopic
 # depend bibtopicprefix
 DEPENDS+=	tex-bibunits-[0-9]*:../../print/tex-bibunits
+# depend biolett-bst
 # depend bookdb
 DEPENDS+=	tex-breakcites-[0-9]*:../../print/tex-breakcites
 # depend breakcites
@@ -102,6 +111,7 @@ DEPENDS+=	tex-harvard-[0-9]*:../../print/tex-harvard
 # depend jneurosci
 DEPENDS+=	tex-jurabib-[0-9]*:../../print/tex-jurabib
 # depend ksfh_nat
+# depend ltb2bib
 # depend listbib
 DEPENDS+=	tex-logreq-[0-9]*:../../print/tex-logreq
 # depend margbib
@@ -111,6 +121,7 @@ DEPENDS+=	tex-multibib-[0-9]*:../../print/tex-multibib
 # depend nar
 # depend nmbib
 # depend notes2bib
+# depend notex-bst
 # depend oscola
 # depend perception
 # depend pnas2009
