--- a/meta-pkgs/texlive-collection-langchinese/Makefile
+++ b/meta-pkgs/texlive-collection-langchinese/Makefile
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.5 2016/06/16 04:03:14 markd Exp $
+# $NetBSD: Makefile,v 1.6 2017/06/22 09:37:21 markd Exp $
 
 DISTNAME=	collection-langchinese
-PKGNAME=	texlive-${DISTNAME}-2016pre1
+PKGNAME=	texlive-${DISTNAME}-2017pre1
 CATEGORIES=	meta-pkgs
 MASTER_SITES=	# empty
-TEXLIVE_REV=	40728
+TEXLIVE_REV=	42675
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://www.tug.org/texlive/
@@ -13,6 +13,7 @@ COMMENT=	Chinese TeX packages
 DEPENDS+=	texlive-collection-langcjk-[0-9]*:../../meta-pkgs/texlive-collection-langcjk
 
 DEPENDS+=	tex-arphic-[0-9]*:../../fonts/tex-arphic
+# depend arphic-ttf
 # asymptote-by-example-zh-cn is documentation only
 # asymptote-faq-zh-cn is documentation only
 # asymptote-manual-zh-cn is documentation only
@@ -25,6 +26,7 @@ DEPENDS+=	tex-hyphen-chinese-[0-9]*:../../print/tex-hyphen-chinese
 # latex-notes-zh-cn is documentation only
 # lshort-chinese is documentation only
 # texlive-zh-cn is documentation only
+# depend texproposal
 # depend xpinyin
 # depend zhmetrics
 # depend zhmetrics-uptex
