--- a/meta-pkgs/texlive-collection-langcjk/Makefile
+++ b/meta-pkgs/texlive-collection-langcjk/Makefile
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.5 2016/06/16 04:03:14 markd Exp $
+# $NetBSD: Makefile,v 1.6 2017/06/22 09:37:21 markd Exp $
 
 DISTNAME=	collection-langcjk
-PKGNAME=	texlive-${DISTNAME}-2016
+PKGNAME=	texlive-${DISTNAME}-2017pre1
 CATEGORIES=	meta-pkgs
 MASTER_SITES=	# empty
-TEXLIVE_REV=	37224
+TEXLIVE_REV=	43009
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://www.tug.org/texlive/
@@ -21,6 +21,7 @@ DEPENDS+=	tex-cjkutils-[0-9]*:../../print/tex-cjkutils
 DEPENDS+=	tex-dnp-[0-9]*:../../print/tex-dnp
 DEPENDS+=	tex-garuda-c90-[0-9]*:../../fonts/tex-garuda-c90
 DEPENDS+=	tex-norasi-c90-[0-9]*:../../fonts/tex-norasi-c90
+# depend pxtatescale
 DEPENDS+=	tex-xcjk2uni-[0-9]*:../../print/tex-xcjk2uni
 DEPENDS+=	tex-zxjafont-[0-9]*:../../print/tex-zxjafont
 
