--- a/meta-pkgs/texlive-collection-langkorean/Makefile
+++ b/meta-pkgs/texlive-collection-langkorean/Makefile
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.6 2016/06/16 04:03:15 markd Exp $
+# $NetBSD: Makefile,v 1.7 2017/06/22 09:37:22 markd Exp $
 
 DISTNAME=	collection-langkorean
-PKGNAME=	texlive-${DISTNAME}-2016
+PKGNAME=	texlive-${DISTNAME}-2017pre1
 CATEGORIES=	meta-pkgs
 MASTER_SITES=	# empty
-TEXLIVE_REV=	33790
+TEXLIVE_REV=	42106
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://www.tug.org/texlive/
@@ -12,6 +12,7 @@ COMMENT=	Korean TeX packages
 
 DEPENDS+=	texlive-collection-langcjk-[0-9]*:../../meta-pkgs/texlive-collection-langcjk
 
+# depend baekmuk
 DEPENDS+=	tex-cjk-ko-[0-9]*:../../print/tex-cjk-ko
 DEPENDS+=	tex-kotex-oblivoir-[0-9]*:../../print/tex-kotex-oblivoir
 DEPENDS+=	tex-kotex-plain-[0-9]*:../../print/tex-kotex-plain
@@ -20,6 +21,8 @@ DEPENDS+=	tex-kotex-utils-[0-9]*:../../print/tex-kotex-utils
 # lshort-korean is documentation only
 DEPENDS+=	tex-nanumtype1-[0-9]*:../../fonts/tex-nanumtype1
 DEPENDS+=	tex-uhc-[0-9]*:../../fonts/tex-uhc
+# depend unfonts-core
+# depend unfonts-extra
 
 META_PACKAGE=	yes
 
