Add defaults for djbdns users and group.

--- a/mk/defaults/mk.conf
+++ b/mk/defaults/mk.conf
@@ -1,4 +1,4 @@
-# $NetBSD: mk.conf,v 1.275 2017/04/16 23:12:37 khorben Exp $
+# $NetBSD: mk.conf,v 1.276 2017/06/23 15:44:06 schmonz Exp $
 #
 
 # This file provides default values for variables that may be overridden
@@ -867,6 +867,20 @@ DIALER_GROUP?= dialer
 # have access permissions by this group.
 # Possible: dialer, dip, uucp, root, dialout, or any other group.
 # Default: dialer
+
+DJBDNS_AXFR_USER?=	axfrdns
+DJBDNS_CACHE_USER?=	dnscache
+DJBDNS_LOG_USER?=	dnslog
+DJBDNS_RBL_USER?=	rbldns
+DJBDNS_TINY_USER?=	tinydns
+# System users for djbdns-related programs.
+# Possible: any user names
+# Default: axfrdns, dnscache, dnslog, rbldns, tinydns
+
+DJBDNS_DJBDNS_GROUP?=	djbdns
+# System group for djbdns-related programs.
+# Possible: any group name
+# Default: djbdns
 
 DT_LAYOUT?= US
 # Used by dt package to specify the keyboard layout.
