--- a/lang/nodejs/Makefile
+++ b/lang/nodejs/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.125 2018/04/29 21:31:49 adam Exp $
+# $NetBSD: Makefile,v 1.126 2018/05/02 16:33:02 fhajny Exp $
 
 DISTNAME=	node-v9.11.1
 
@@ -8,7 +8,7 @@ GCC_REQD+=	4.9.4
 CONFIGURE_ARGS+=	--shared-nghttp2
 CONFIGURE_ARGS+=	--with-intl=system-icu
 
-PKGREVISION= 2
+PKGREVISION= 3
 .include "../../lang/nodejs/Makefile.common"
 .include "../../textproc/icu/buildlink3.mk"
 .include "../../www/nghttp2/buildlink3.mk"
