--- a/lang/nodejs6/Makefile
+++ b/lang/nodejs6/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.23 2018/04/04 10:35:55 fhajny Exp $
+# $NetBSD: Makefile,v 1.24 2018/05/02 16:33:02 fhajny Exp $
 
 DISTNAME=	node-v6.14.1
+PKGREVISION=	1
 
 .include "../../lang/nodejs/Makefile.common"
 .include "../../mk/bsd.pkg.mk"
