--- a/lang/nodejs8/Makefile
+++ b/lang/nodejs8/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.9 2018/04/14 07:34:29 adam Exp $
+# $NetBSD: Makefile,v 1.10 2018/05/02 16:33:02 fhajny Exp $
 
 DISTNAME=	node-v8.11.1
 
@@ -7,7 +7,7 @@ GCC_REQD+=	4.9.4
 
 CONFIGURE_ARGS+=	--with-intl=system-icu
 
-PKGREVISION= 1
+PKGREVISION= 2
 .include "../../lang/nodejs/Makefile.common"
 .include "../../textproc/icu/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
