Update to 3.43. From the changelog:
-updated astyle code to release 3.1 (Rev. 655)
-added webkit reformatting style
-improved several language definitions
-fixed Matlab string recognition (https://github.com/andre-simon/highlight/issues/61)
-fixed Autohotkey escape sequence recognition (thanks to Klaus Daube)
-added excel.lang (https://github.com/andre-simon/highlight/pull/60)
-improved Qt pro file (https://github.com/andre-simon/highlight/pull/59)
-CLI: added --reformat-option (https://github.com/andre-simon/highlight/issues/62)
-CLI: added --line-range (https://github.com/andre-simon/highlight/issues/64)
-GUI: added Bulgarian translation  (thanks to Georgi Sotirov)

-fixed HL_OUTPUT in Lua state for HL_FORMAT_XHTML and HL_FORMAT_TRUECOLOR values
-fixed lib-shared make target
-updated astyle code to release 3.1.0 beta
-added Polygen and EBNF2 syntax definitions (thanks to Tristano Ajmone)
-added pywal terminal colouring template in extras/pywal
-added reformatting style ratliff (replaces banner)
-added extras/langDefs-resources/cleanslate.lang (thanks to Tristano Ajmone)
-improved Perl6 compatibility
-improved PHP string interpolation
-improved Haskell definition (https://github.com/andre-simon/highlight/pull/52)
-CLI: added --canvas option to define background color padding in ANSI output
  (https://github.com/andre-simon/highlight/issues/40)
-GUI: added French translation (thanks to Antoine Belvire)
-GUI: added Scripts tab (suggested by Tristano Ajmone)
-GUI: minor bugfixes

-renamed examples directory to extras
-line anchors (-a) are attached as id attribute to the first span or li tag in
  HTML output (https://github.com/andre-simon/highlight/issues/36)
-renamed ID prefix in outhtml_codefold plug-in to be compatible with -a IDs
-added fstab.lang and added anacrontab in filetypes.conf
-removed references to OutputType::HTML32
-added extras/css-themes and extras/langDefs-resources
  (thanks to Tristano Ajmone)
-CLI: removed deprecated indicator of --data-dir opti

--- a/textproc/libhighlight/Makefile.common
+++ b/textproc/libhighlight/Makefile.common
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile.common,v 1.2 2018/04/08 19:40:29 schmonz Exp $
+# $NetBSD: Makefile.common,v 1.1 2018/05/03 13:13:51 schmonz Exp $
 # used by textproc/highlight/Makefile
 # used by textproc/libhighlight/Makefile
 # used by textproc/p5-highlight/Makefile
 
 DISTNAME=		highlight-${VERSION}
-VERSION=		3.18
+VERSION=		3.43
 CATEGORIES=		textproc
 MASTER_SITES=		http://www.andre-simon.de/zip/
 EXTRACT_SUFX=		.tar.bz2
@@ -15,12 +15,12 @@ COMMENT=		Converts source code to formatted text with syntax highlighting
 LICENSE=		gnu-gpl-v3
 
 USE_TOOLS+=		gmake pkg-config
-USE_LANGUAGES=		c c++
+USE_LANGUAGES=		c c++11
 MAKE_FILE=		makefile
 
-PATCHDIR=		${.CURDIR}/../../textproc/highlight/patches
-DISTINFO_FILE=		${.CURDIR}/../../textproc/highlight/distinfo
-DESCR_SRC=		${.CURDIR}/../../textproc/highlight/DESCR
+PATCHDIR=		${.CURDIR}/../../textproc/libhighlight/patches
+DISTINFO_FILE=		${.CURDIR}/../../textproc/libhighlight/distinfo
+DESCR_SRC=		${.CURDIR}/../../textproc/libhighlight/DESCR
 
 PKG_SYSCONFSUBDIR=	highlight
 
