ruby-xz: needs ruby 2.3.0 or higher

--- a/archivers/ruby-xz/Makefile
+++ b/archivers/ruby-xz/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.14 2018/09/23 13:44:11 taca Exp $
+# $NetBSD: Makefile,v 1.15 2018/09/27 23:58:21 tnn Exp $
 
 DISTNAME=	ruby-xz-1.0.0
 PKGNAME=	${RUBY_PKGPREFIX}-${DISTNAME:S/ruby-//}
@@ -10,6 +10,8 @@ COMMENT=	Ruby bindings for liblzma
 LICENSE=	mit
 
 DEPENDS+=	${RUBY_NAME}-fiddle>=${RUBY_VERSION}:../../devel/ruby-fiddle
+
+RUBY_VERSIONS_ACCEPTED=	23 24 25
 
 SUBST_CLASSES+=		path
 SUBST_STAGE.path=	pre-configure
