MesaLib18: adjust pthread stubs patch to ensure no OS picks it up, as we don't provide libpthread stubs.
Note that the name is misleading, libpthread stubs refers to a library
that only pulls in libpthread if a set of functions is not available as
stubs as libc. It is only a pkgconfig file that answers the question
"pull in libpthread? Y/N".

Replace non-existent libpthread stubs buildlink3.mk with the pthread
buildlink3.mk, we should be linking with libpthread for most (all?)
OSes.

--- a/graphics/MesaLib18/patches/patch-configure.ac
+++ b/graphics/MesaLib18/patches/patch-configure.ac
@@ -1,6 +1,6 @@
-$NetBSD: patch-configure.ac,v 1.1 2018/10/07 23:49:31 ryoon Exp $
+$NetBSD: patch-configure.ac,v 1.2 2018/10/10 11:03:02 maya Exp $
 
-Don't check for pthread stubs on netbsd.
+Don't check for pthread stubs anywhere, as we don't provide it.
 
 From FreeBSD ports graphics/mesa-dri 18.0.0,
 DragonFly dports graphics/mesa-dri 17.3.1,
@@ -46,7 +46,7 @@ without DRI3 support.
  dnl project. Even then there's a notable issue as described in the project README
  case "$host_os" in
 -linux* | cygwin* | darwin* | solaris* | *-gnu* | gnu* | openbsd*)
-+linux* | cygwin* | darwin* | solaris* | *-gnu* | gnu* | openbsd* | netbsd*)
++*)
      pthread_stubs_possible="no"
      ;;
  * )
